# netnudge-mvp

./: .env.example  .gitignore  README.md  app.py  cli.py  main.py  pyproject.toml
src/netnudge/: __init__.py
src/netnudge/agent/: __init__.py  agent.py
src/netnudge/agent/tools/: __init__.py  contacts.py  messages.py  sms.py  state.py  system.py
src/netnudge/contacts/: __init__.py  google_client.py
src/netnudge/generator/: __init__.py  claude_client.py
src/netnudge/linkedin/: __init__.py  parser.py
src/netnudge/matcher/: __init__.py  matcher.py
src/netnudge/output/: __init__.py  xlsx_writer.py
src/netnudge/ui/: __init__.py  components.py
