[project]
name = "netnudge-mvp"
version = "0.1.0"
description = "CLI tool to generate personalized network outreach messages"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.12.0",
    "python-dotenv>=1.0.0",
    "google-auth-oauthlib>=1.2.0",
    "google-api-python-client>=2.100.0",
    "anthropic>=0.40.0",
    "openpyxl>=3.1.0",
    "pydantic>=2.0.0",
]

[project.scripts]
netnudge = "cli:app"
